# python-reproj

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-publish.yml  test-with-coverage.yml  test.yml
binder/: requirements.txt
examples/: basic_example.ipynb
examples/data/: linestring_32630.geojson  linestring_4326.geojson  multipolygon_32630.geojson  multipolygon_4326.geojson  polygon_32630.geojson  polygon_4326.geojson
src/reproj/: __init__.py  main.py
tests/: test_main.py
